--- a/environment.yml
+++ b/environment.yml
@@ -3,13 +3,15 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - ca-certificates=2021.1.19
+  - ca-certificates=2021.4.13
   - certifi=2020.12.5
+  - intel-openmp=2021.2.0
   - libcxx=11.0.1
   - libffi=3.3
+  - mkl=2021.2.0
   - mkl-service=2.3.0
   - ncurses=6.2
-  - openssl=1.1.1i
+  - openssl=1.1.1k
   - pip=20.2.2
   - python=3.8.6
   - readline=8.1
@@ -31,18 +33,17 @@ dependencies:
     - black==20.8b1
     - bleach==3.3.0
     - causalgraphicalmodels==0.0.4
-    - cffi==1.14.4
+    - cffi==1.14.5
     - cftime==1.4.1
     - click==7.1.2
     - cycler==0.10.0
-    - daft==0.1.2
+    - daft==0.1.0
     - decorator==4.4.2
     - defusedxml==0.6.0
     - dill==0.3.3
     - entrypoints==0.3
     - fastprogress==1.0.0
     - filelock==3.0.12
-    - intel-openmp==2021.1.2
     - ipykernel==5.4.3
     - ipython==7.20.0
     - ipython-genutils==0.2.0
@@ -62,15 +63,14 @@ dependencies:
     - markupsafe==1.1.1
     - matplotlib==3.3.4
     - mistune==0.8.4
-    - mkl==2021.1.1
     - mypy-extensions==0.4.3
     - nb-black==1.0.7
-    - nbclient==0.5.1
+    - nbclient==0.5.3
     - nbconvert==6.0.7
-    - nbformat==5.1.2
+    - nbformat==5.1.3
     - nest-asyncio==1.5.1
-    - netcdf4==1.5.5.1
-    - networkx==2.5.1
+    - netcdf4==1.5.6
+    - networkx==2.5
     - notebook==6.2.0
     - numpy==1.20.1
     - packaging==20.9
@@ -83,25 +83,23 @@ dependencies:
     - pickleshare==0.7.5
     - pillow==8.1.0
     - prometheus-client==0.9.0
-    - prompt-toolkit==3.0.14
+    - prompt-toolkit==3.0.16
     - ptyprocess==0.7.0
     - pycparser==2.20
-    - pygments==2.7.4
+    - pygments==2.8.0
     - pymc3==3.11.0
     - pyparsing==2.4.7
     - pyrsistent==0.17.3
     - python-dateutil==2.8.1
-    - python-graphviz==0.16
     - pytz==2021.1
     - pyyaml==5.4.1
-    - pyzmq==22.0.2
+    - pyzmq==22.0.3
     - regex==2020.11.13
     - rpy2==3.4.2
     - scipy==1.6.0
     - seaborn==0.11.1
     - send2trash==1.5.0
     - statsmodels==0.12.2
-    - tbb==2021.1.1
     - terminado==0.9.2
     - testpath==0.4.4
     - theano-pymc==1.1.0
@@ -114,6 +112,5 @@ dependencies:
     - watermark==2.1.0
     - wcwidth==0.2.5
     - webencodings==0.5.1
-    - xarray==0.16.2
-    - yapf==0.30.0
+    - xarray==0.17.0
 prefix: /Users/blacar/opt/anaconda3/envs/stats_rethinking
