--- a/environment.yml
+++ b/environment.yml
@@ -33,6 +33,7 @@ dependencies:
     - backcall==0.2.0
     - black==20.8b1
     - bleach==3.3.0
+    - cairocffi==1.3.0
     - causalgraphicalmodels==0.0.4
     - cffi==1.14.5
     - cftime==1.4.1
@@ -47,6 +48,7 @@ dependencies:
     - fastprogress==1.0.0
     - filelock==3.0.12
     - flatbuffers==2.0
+    - igraph==0.9.9
     - ipykernel==5.4.3
     - ipython==7.20.0
     - ipython-genutils==0.2.0
@@ -111,6 +113,7 @@ dependencies:
     - statsmodels==0.12.2
     - terminado==0.9.2
     - testpath==0.4.4
+    - texttable==1.6.4
     - theano-pymc==1.1.0
     - toml==0.10.2
     - tornado==6.1
