--- a/environment.yml
+++ b/environment.yml
@@ -3,17 +3,54 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - ca-certificates=2021.4.13
-  - certifi=2020.12.5
+  - atk-1.0=2.36.0
+  - ca-certificates=2021.10.8
+  - cairo=1.16.0
+  - certifi=2021.10.8
+  - expat=2.2.10
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.13.94
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - freetype=2.10.4
+  - fribidi=1.0.10
+  - gdk-pixbuf=2.42.2
+  - gettext=0.19.8.1
+  - giflib=5.2.1
+  - graphite2=1.3.13
+  - graphviz=2.46.1
+  - gtk2=2.24.33
+  - gts=0.7.6
+  - harfbuzz=2.7.4
+  - icu=68.1
   - intel-openmp=2021.2.0
+  - jpeg=9e
   - libcxx=11.0.1
   - libffi=3.3
+  - libgd=2.3.0
+  - libglib=2.66.7
+  - libiconv=1.16
+  - libpng=1.6.37
+  - librsvg=2.50.3
+  - libtiff=4.2.0
+  - libtool=2.4.6
+  - libwebp=1.2.0
+  - libwebp-base=1.2.0
+  - libxml2=2.9.12
+  - lz4-c=1.9.3
   - mkl=2021.2.0
   - mkl-service=2.3.0
   - ncurses=6.2
-  - openssl=1.1.1k
+  - openssl=1.1.1o
+  - pango=1.42.4
+  - pcre=8.44
   - pip=20.2.2
+  - pixman=0.40.0
   - python=3.8.6
+  - python_abi=3.8
   - readline=8.1
   - setuptools=52.0.0
   - six=1.15.0
@@ -22,6 +59,7 @@ dependencies:
   - wheel=0.36.2
   - xz=5.2.5
   - zlib=1.2.11
+  - zstd=1.4.9
   - pip:
     - absl-py==0.12.0
     - appdirs==1.4.4
